# 3d-beacons-client

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG  Dockerfile  Makefile  README.md  Snakefile  docker-compose.local.yml  docker-compose.yml  main.py  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: main.yml
bio3dbeacons/: hashpath.py
bio3dbeacons/api/: main.py  utils.py
bio3dbeacons/api/models/: uniprot_model.py
bio3dbeacons/cli/: __init__.py  cli.py  models.py  sparql.py  utils.py
bio3dbeacons/cli/ciftojson/: ciftojson.py
bio3dbeacons/cli/metadata_generators/: pfam_baker.py
bio3dbeacons/cli/modelmanager/: __init__.py  _modelrepository.py  modelmanager.py
bio3dbeacons/cli/mongoload/: mongoload.py
bio3dbeacons/cli/pdbmanager/: __init__.py  _pdbrepository.py  pdbmanager.py
bio3dbeacons/cli/pdbtocif/: pdbtocif.py
bio3dbeacons/cli/validatejson/: validatejson.py
docker/cli/: Dockerfile
docker/nginx/: default.conf  nginx.conf
docker/web/: Dockerfile
frontend/: index.html
frontend/assets/css/: styles.css
frontend/assets/js/: app.js
resources/: 3dbeacons-1.3.0.json  3dbeacons-2.0.0.yaml  schema.json
tests/: conftest.py  test_hashpath.py
tests/data/cif/: P38398_1jm7.1.A_1_103.cif
tests/data/pfam_baker/metadata/: PF06625.json
tests/tests_api/: test_main.py  test_utils.py
tests/tests_cli/: test_ciftojson.py  test_generate_metadata.py  test_mongoload.py  test_sparql.py  test_utils.py  utils.py
tests/tests_cli/modelmanager/: test_modelmanager.py
tests/tests_cli/pdbmanager/: test_pdbmanager.py
