[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bio3dbeacons"
description = "A Python package for the 3D Beacons Client"
readme = "README.md"
requires-python = ">=3.12"
keywords = ["python", "solr", "tasks", "models", "beacons"]
license = { file = "LICENSE" }
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.12",
]

# version taken from Python attribute
dynamic = ["version"]

# Core dependencies shared across all components
dependencies = [
  "coloredlogs[test]>=15.0.1",
  "dotenv>=0.9.9",
  "fastapi>=0.124.0",
  "gemmi[test]>=0.7.4",
  "httpx>=0.28.1",
  "jsonschema[cli]>=4.25.1",
  "motor>=3.7.1",
  "pydantic==2.12.5",
  "pymongo==4.15.5",
  "requests[cli]>=2.32.5",
  "sparqlwrapper[cli]>=2.0.0",
]

[project.optional-dependencies]
# CLI-specific dependencies
cli = [
  "click==8.3.1",
  "exitstatus==2.6.0",
  "requests==2.32.5",
  "gemmi==0.7.4",
  "coloredlogs==15.0.1",
  "jsonschema==4.25.1",
  "fastapi==0.124.0",
  "prettyconf>=2.3.0",
  "snakemake>=8.25.5",
  "sparqlwrapper>=2.0.0",
]

# API-specific dependencies
api = [
  "fastapi==0.124.0",
  "uvicorn>=0.38.0",
  "aiohttp>=3.11.11",
  "motor>=3.7.0",
  "python-dotenv>=1.0.1",
]

# Development dependencies
test = [
  "flake8-black==0.3.6",
  "mypy==1.11.2",
  "isort==5.13.2",
  "attrs==24.2.0",
  "coverage==7.6.1",
  "iniconfig==2.0.0",
  "packaging==24.2",
  "pluggy==1.5.0",
  "py==1.11.0",
  "pyparsing==3.1.4",
  "pytest-cov==5.0.0",
  "pytest-mock==3.14.0",
  "pytest==8.3.3",
  "toml==0.10.2",
  "prettyconf==2.3.0",
]

doc = [
  "sphinx==7.4.7",
  "sphinx-rtd-theme==2.0.0",
  "sphinx_markdown_tables==0.0.17",
  "recommonmark==0.7.1",
]

# Install everything for complete development
dev = [
  "bio3dbeacons[cli,api,test,doc]",
]

[project.scripts]
3dbeacons-cli = "bio3dbeacons.cli.cli:main"

# -----------------------
# Hatchling Configuration
# -----------------------
[tool.hatch.metadata]
allow-direct-references = true

# Dynamic version from Python attribute (like "attr: __version__.__version__")
[tool.hatch.version]
path = "bio3dbeacons/__version__.py"
# If your attribute is inside a nested module, rename accordingly.

# If the version attribute is NOT exactly in `bio3dbeacons/__version__.py`
# tell me the actual path and I will adjust it.

[tool.hatch.build.targets.sdist]
include = ["bio3dbeacons", "README.md", "LICENSE"]

[tool.hatch.build.targets.wheel]
packages = ["bio3dbeacons"]

# -----------------------
# Flake8 settings
# -----------------------
[tool.flake8]
exclude = [
  ".git",
  "__pycache__",
  "build",
  "dist",
  "Snakefile",
]
max-line-length = 120
ignore = ["F722"]
